[project]
name = "KDMiLe-Prediction"
version = "1.0.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "imbalanced-learn (>=0.13.0,<0.14.0)",
    "xgboost-cpu (>=3.2.0,<4.0.0)",
    "fastparquet (>=2026.3.0,<2027.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "dev"}]